--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="title" content="COCA FERNÁNDEZ & VALENTINA PICÓ">
-<title>COCA FERNÁNDEZ & VALENTINA PICÓ</title>
+<meta name="title" content="COCA FERNÁNDEZ Y VALENTINA PICÓ">
+<title>COCA FERNÁNDEZ Y VALENTINA PICÓ</title>
 <!-- Search Engine -->
 <meta name="description" content="cambiar">
 <meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
