--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="title" content="COCA FERNÁNDEZ Y VALENTINA PICÓ">
-<title>COCA FERNÁNDEZ Y VALENTINA PICÓ</title>
+<meta name="title" content="Fernandez - Pico">
+<title>Fernández - Picó</title>
 <!-- Search Engine -->
 <meta name="description" content="cambiar">
 <meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
@@ -26,33 +26,33 @@
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
 <!--ahora vinculamos los estilos-->
-<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:300,600" rel="stylesheet">
+<link href="link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
 <body>
 <div id="contenido">
 <header>
-	<h1>NOMBRE DUPLA</h1>
-	<h2>pongan aquí su slogan winner</h2>
+	<h1>Fernández - Picó</h1>
+	<h2>Creando lo nuevo</h2>
 </header>
-<video autoplay loop preload="auto" poster="media/video.jpg">
-	<source src="media/video.webm" type="video/webm">
-	<source src="media/video.mp4" type="video/mp4">
+<video autoplay loop preload="auto" poster="media/fotovideo.jpg">
+	<source src="media/PortafolioValeyCoca.mp4" type="video/webm">
+	<source src="media/PortafolioValeyCoca.mp4" type="video/mp4">
 	<p>Tu navegador no soporta el elemento, actualízate.</p>
 </video>
-<h3>QUIENES SOMOS</h3>
+<h3>Sobre Nosotras</h3>
 <div id="somos">
 	<div class="dupla primera">
-		<h4>NOMBRE APELLIDO</h4>
-		<h5>Slogan personal winner</h5>
-		<p>Praesent euismod et urna vitae aliquam aliquam.</p>
-		<address><a href="mailto:mail@mail.com">mail@mail.com</a></address>
+		<h4>M. Victoria Fernández P.</h4>
+		<h5>Visual y tangible</h5>
+		<p>Complementando entre Arquitectura y el Diseño, buscando creatividad en lo cotidiano</p>
+		<address><a href="mailto:mcfernandez@uc.cl">mcfernandez@uc.cl</a></address>
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
-		<h4>NOMBRE APELLIDO</h4>
-		<h5>Slogan personal winner</h5>
-		<p>Suspendisse dapibus aliquam lorem ac congue.</p>
-		<address><a href="mailto:mail@mail.com">mail@mail.com</a></address>
+		<h4>Valentina Picó D.</h4>
+		<h5>Buscando un cambio en la industria</h5>
+		<p>Buscando la inovación del mercado a través del diseño, teniendo en primera consideración los impactos medio ambientales que son involucrados en el proceso de desarrollo de un producto</p>
+		<address><a href="mailto:vpdoren@uc.cl">vpdoren@uc.cl</a></address>
 	</div><!--/dupla segunda-->
 	<hr />
 </div><!--/somos-->
@@ -60,48 +60,43 @@
 <div id="portafolio">
 	<div class="item">
 		<figure><img src="media/foto-01.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Chinmi</h4>
+	  	<p>Diseño de marca para introducir un producto extranjero en el mercado chileno. En este caso, unos chocolates de matcha provenientes de la cultura Japonesa, entregados como regalo a una persona especial</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-02.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Protector aislante</h4>
+	  	<p> Es un protector de aislante térmico que se utiliza en la montaña para el celular, de manera que este usuario pueda seguir usando su celular como lo hace cotidianamente, pero en la montaña sin que este se vea restringido por la temperatura</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-03.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Proyecto Plaza</h4>
+	  	<p>Tomar un espacio perdido en Santiago y formular un proyecto de plaza para aprovechar de mejor manera el espacio y su relacion con el río Mapocho</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-04.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
-	</div><!--/item-->
-	<div class="item">
-		<figure><img src="media/foto-04.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Embroidery de WTR</h4>
+	  	<p>Diseño de Artwork del disco debut Embroidery para la banda de rock progresivo chilena WalkTheRail. Disco será lanzado al público en Abril 2018</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-05.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Aruna</h4>
+	  	<p>Alimento vegano que no se encuentra en el mercado chileno y responde a una nueva tendencia de vida sana. Son para aquellos que no tienen o no priorizan su tiempo para cocinar, pero está consciente de comer de manera saludable</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-06.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Huerto Maggi</h4>
+	  	<p>Linea de alimentos que busca agregar un toque de naturalidad a la linea de alimentos de la marca Maggi ofreciendo productos que provienen directamente "del campo"</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-07.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Personaje ficticio</h4>
+	  	<p>Diseño de personajes en acuarela, buscando generar una personalidad tranquila y calma sin el uso de expresiones faciales</p>
 	</div><!--/item-->
 	<div class="item">
-		<figure><img src="media/foto-08.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+		<figure><img src="/Users/valepdoren/Downloads/plantilla/media/Comunicacion del proyecto.jpg"/></figure>
+	  	<h4>Peto Preventivo al Cancer de Mama</h4>
+	  	<p>Trabajo de diseño el cual abarca la necesidad de responder a aquellas mujeres que todavia no tiene el conociemiento de como hacerse el auto chequeo mamario.</p>
 	</div><!--/item-->
 </div><!--/portafolio-->
 
