--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
 <meta name="title" content="Fernandez - Pico">
 <title>Fernández - Picó</title>
 <!-- Search Engine -->
-<meta name="description" content="cambiar">
-<meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
+<meta name="description" content="Portafolio Vale y Coca">
+<meta name="image" content="chttps://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
 <!-- Schema.org for Google -->
-<meta itemprop="name" content="cambiar">
-<meta itemprop="description" content="cambiar">
-<meta itemprop="image" content="cambiar por una URL, deben poner la imagen en línea">
+<meta itemprop="name" content="Fernandez y Picó">
+<meta itemprop="description" content="Portafolio Vale y Coca">
+<meta itemprop="image" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
 <!-- Twitter -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="cambiar">
-<meta name="twitter:description" content="cambiar">
+<meta name="twitter:Portafolio vale y coca" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
+<meta name="twitter:Página web sobre el portafolio de dos estudiantes Uc" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="cambiar">
-<meta name="og:description" content="cambiar">
-<meta name="og:image" content="cambiar">
-<meta name="og:url" content="cambiar">
-<meta name="og:site_name" content="cambiar">
+<meta name="og:title" content="https://github.com/valepdoren/fernandez-pico">
+<meta name="og:description" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
+<meta name="og:image" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
+<meta name="og:url" content="https://github.com/valepdoren/fernandez-pico">
+<meta name="og:site_name" content="Fernandez y Picó">
 <meta name="og:locale" content="es_CL">
-<meta name="og:type" content="website">
+<meta name="og:type" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
 <!--ahora vinculamos los estilos-->
 <link href="link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css" type="text/css">
