--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Portafolio Vale y Coca">
 <meta name="image" content="chttps://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
 <!-- Schema.org for Google -->
-<meta itemprop="name" content="Fernandez y Picó">
+<meta itemprop="name" content="Fernandez - Picó">
 <meta itemprop="description" content="Portafolio Vale y Coca">
 <meta itemprop="image" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
 <!-- Twitter -->
@@ -22,7 +22,7 @@
 <meta name="og:description" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
 <meta name="og:image" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
 <meta name="og:url" content="https://github.com/valepdoren/fernandez-pico">
-<meta name="og:site_name" content="Fernandez y Picó">
+<meta name="og:site_name" content="Fernandez - Picó">
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="https://github.com/valepdoren/fernandez-pico/blob/gh-pages/media/fotovideo.jpg">
 <!--ahora vinculamos los estilos-->
